--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img src="imgs/d1.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
               <h5 class="card-title">2x1</h5>
-              <p class="card-text">Pidiendo una pizza margherita, tenés otra de regalo</p>
+              <p class="card-text">Pidiendo una pizza <u>margherita</u>, tenés otra de regalo</p>
             </div>
           </div>
         </div>
@@ -87,7 +87,7 @@
             <img src="imgs/d2.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
               <h5 class="card-title">35% de descuento</h5>
-              <p class="card-text">Todos los mediodías 35% de descuento en todas las pastas de nuestra carta.</p>
+              <p class="card-text">Todos los <u>mediodías</u> 35% de descuento en todas las pastas de nuestra carta.</p>
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
             <img src="imgs/d3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Tiramisú gratis</h5>
-              <p class="card-text">Los viernes el postre lo invita la casa.</p>
+              <p class="card-text">Los <u>viernes</u> el postre lo invita la casa.</p>
               <p>Promoción solo válida en cenas de dos personas.</p>
             </div>
           </div>
