--- a/menu.html
+++ b/menu.html
@@ -35,12 +35,13 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Nuestra Carta, Siempre en Evolución
+                Nuestra Carta, siempre en evolución
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                En <em>Bella Italia</em>, nos esforzamos por ofrecerte lo mejor en cada visita. Por eso, nuestra carta se renueva constantemente, adaptándose a los productos de estación y seleccionando cuidadosamente los ingredientes más frescos de la región. Nos apasiona mejorar continuamente, y cada nuevo plato es una expresión de nuestro compromiso por brindarte una experiencia gastronómica única y memorable.
+                <p>En <em>Bella Italia</em>, nos esforzamos por ofrecerte lo mejor en cada visita. Por eso, nuestra carta se renueva constantemente, adaptándose a los productos de estación y seleccionando cuidadosamente los ingredientes más frescos de la región. Nos apasiona mejorar continuamente, y cada nuevo plato es una expresión de nuestro compromiso por brindarte una experiencia gastronómica única y memorable.</p>
+                <p><em>El menú que se obserba abajo es la <u>carta estable de la semana</u>, pero todos los días nos gusta sorprender con platos únicos que no forman parte de la carta.</em></p>
             </div>
           </div>
         </div>
@@ -72,46 +73,126 @@
 
       <h3 id="titulo">Pizza</h3>
 
-      <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="row row-cols-1 row-cols-md-3 g-4" id="cards">
         <div class="col">
           <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="imgs/pz1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Margherita</h5>
+              <p class="card-text">La clásica pizza napolitana con una base de masa suave y esponjosa, elaborada según la tradición italiana. Cubierta con tomates San Marzano, mozzarella fresca, hojas de albahaca y un toque de aceite de oliva virgen extra. Una combinación simple pero perfecta, que captura la esencia de los auténticos sabores de Nápoles.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="imgs/pz2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a short card.</p>
+              <h5 class="card-title">Pepperoni</h5>
+              <p class="card-text">Una auténtica pizza napolitana con base de masa fina y esponjosa, cubierta con mozzarella fresca y rodajas de pepperoni ligeramente picantes. Horneada en horno de piedra para lograr un borde crujiente y un centro suave, esta pizza es perfecta para quienes buscan una combinación de sabores clásicos con un toque de intensidad.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="imgs/pz3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Mediterranea</h5>
+              <p class="card-text">Una deliciosa pizza napolitana con masa tradicional, cubierta con mozzarella fresca, jamón curado, aceitunas negras y pimientos verdes. Cada bocado ofrece una combinación equilibrada de sabores mediterráneos, desde la salinidad del jamón y las aceitunas hasta la suavidad de la mozzarella y el toque fresco de los pimientos. Horneada para lograr un borde crujiente y un centro jugoso, esta pizza es una celebración de los sabores del Mediterráneo.</p>
+            </div>
+          </div>
+        </div>        
+      </div>
+
+      <h3 id="titulo">Pasta</h3>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4" id="cards">
+        <div class="col">
+          <div class="card h-100">
+            <img src="imgs/p1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Linguine alla Carbonara</h5>
+              <p class="card-text">Deliciosa pasta linguine mezclada con una cremosa salsa carbonara tradicional, elaborada con yemas de huevo, queso pecorino y panceta crujiente. Un plato clásico de la cocina italiana, lleno de sabor y con una textura suave, ideal para los amantes de la auténtica carbonara.</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="imgs/p2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Ravioli Capresi con Salsa Arrabbiata</h5>
+              <p class="card-text">Exquisitos raviolis rellenos de ricotta y hierbas frescas, inspirados en la tradición de Capri, servidos con una vibrante salsa arrabbiata hecha con tomates frescos, ajo y un toque de peperoncino para darles el picante perfecto. Un plato lleno de carácter y sabor que te transportará al corazón de Italia.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="imgs/p3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Lasagna alla Bolognese</h5>
+              <p class="card-text">Capas de pasta fresca intercaladas con una rica salsa boloñesa, elaborada con carne de res, tomates maduros y una suave bechamel. Horneada al punto perfecto para lograr una textura cremosa y gratinada, nuestra lasagna es una auténtica representación de la cocina italiana tradicional, ideal para los amantes de los sabores intensos y reconfortantes.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="imgs/p4.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Penne con Salsa Alfredo</h5>
+              <p class="card-text">Tiersos penne bañados en una cremosa y suave salsa Alfredo, preparada con mantequilla, nata y queso parmesano de la mejor calidad. Un plato simple pero lleno de sabor, perfecto para quienes disfrutan de la auténtica cocina italiana en su versión más reconfortante y deliciosa.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="imgs/p5.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Rigatoni al Pesto</h5>
+              <p class="card-text">Rigatoni al dente mezclados con una fresca salsa pesto de albahaca, piñones, ajo y queso parmesano, todo suavemente ligado con aceite de oliva virgen extra. Un plato lleno de aromas y sabores mediterráneos, perfecto para quienes buscan una opción ligera y fresca que captura la esencia de la cocina italiana.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="imgs/p6.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Gnocchi ai Funghi</h5>
+              <p class="card-text">Tiernos gnocchi de papa acompañados de una deliciosa salsa de champiñones frescos, salteados en mantequilla y aromatizados con ajo, hierbas y nueces. Un plato cremoso y reconfortante que combina la suavidad de los gnocchi con el profundo sabor terroso de los funghi, perfecto para los amantes de los sabores intensos y naturales.</p>
             </div>
           </div>
         </div>
       </div>
 
+      <h3 id="titulo">Postres</h3>
 
+      <div class="row row-cols-1 row-cols-md-3 g-4" id="cards">
+        <div class="col">
+          <div class="card h-100">
+            <img src="imgs/d3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Tiramisu</h5>
+              <p class="card-text">Un clásico postre italiano que combina capas de bizcochos empapados en café espresso con una suave y cremosa mezcla de mascarpone, yemas de huevo y azúcar. Espolvoreado con cacao amargo para un toque final, nuestro tiramisú ofrece una experiencia rica y decadente, perfecta para cerrar cualquier comida con un toque dulce y elegante.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="imgs/d4.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Panna Cotta</h5>
+              <p class="card-text">Nata fresca, vainilla y un suave bizcocho se unen en este postre italiano de textura aterciopelada.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="imgs/d5.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cannoli Siciliani</h5>
+              <p class="card-text">Deliciosos cannoli rellenos con una mezcla de ricotta fresca y azúcar, adornados con trocitos de pistacho y un toque de cáscara de naranja. La masa crujiente y dorada se complementa perfectamente con el relleno cremoso y dulce, creando un postre clásico siciliano que combina texturas y sabores en cada bocado.</p>
+            </div>
+          </div>
+        </div>        
+      </div>
 
       <footer class="bg-dark text-light py-4">
         <div class="container">
