--- a/staff.html
+++ b/staff.html
@@ -11,7 +11,9 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <img src="imgs/logo.png" alt="Bella Italia Logo" style="height: 40px;">
+          <a class="navbar-brand" href="index.html">
+            <img src="imgs/logo.png" alt="Bella Italia Logo" style="height: 40px;">
+        </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,13 +26,75 @@
                 <a class="nav-link" href="menu.html">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Staff</a>
+                <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
 
+      <section id="nosotros" class="container mt-5">
+        <div class="row">
+            <div class="col-lg-6">
+                <h2 class="mb-4">Nuestra Historia</h2>
+                <p>
+                    En <strong>Bella Italia</strong>, cada plato cuenta una historia. Fundado en 1995 en el corazón de la ciudad, nuestro restaurante ha sido un pilar de la cocina italiana auténtica. 
+                    Con una pasión por la calidad y el sabor, comenzamos como un pequeño bistró y, gracias a la dedicación de nuestro equipo y la lealtad de nuestros clientes, hemos crecido para ofrecer una experiencia culinaria única.
+                </p>
+                <p>
+                    Nuestros ingredientes se seleccionan con cuidado, y nuestras recetas se transmiten de generación en generación. Creemos en la importancia de la tradición y en ofrecer a nuestros clientes no solo comida deliciosa, sino también una experiencia memorable. 
+                    Cada visita a <strong>Bella Italia</strong> es una oportunidad para disfrutar de la auténtica hospitalidad italiana en un ambiente acogedor.
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <img src="imgs/nuestra-historia.jpg" class="img-fluid rounded" alt="Historia de Bella Italia">
+            </div>
+        </div>
+    </section>
+    
+    <h3 id="titulo">Nuestro staff</h3>
+
+      <section style="padding: 1vw;">
+        <div class="card mb-3" style="max-width: 1200px; margin: 0 auto;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="imgs/JoanStaff.png" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-danger">Joan: <em>Pizzaiolo</em></h5>
+                <p class="card-text">Con años de experiencia en la elaboración de pizzas auténticas, Joan es el maestro detrás de nuestras deliciosas creaciones. Su habilidad en el manejo de la masa y su pasión por la tradición napolitana aseguran que cada pizza sea una obra maestra. Joan utiliza solo los mejores ingredientes y técnicas artesanales para ofrecerte la experiencia de pizza más auténtica y sabrosa.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="max-width: 1200px; margin: 0 auto;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="imgs/JoanStaff.png" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-danger">Andrea: <em>Chef Ejecutivo</em></h5>
+                <p class="card-text">Andrea es el corazón y el alma de nuestra cocina. Con una vasta experiencia en la alta cocina italiana y una pasión inigualable por la gastronomía, supervisa la creación de cada plato con un enfoque meticuloso en la calidad y la presentación. Su habilidad para combinar ingredientes frescos y técnicas tradicionales garantiza que cada comida sea una experiencia culinaria excepcional. Andrea no solo lidera al equipo de cocina, sino que también se involucra en el desarrollo del menú, asegurando que cada plato refleje su compromiso con la excelencia y la autenticidad.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="max-width: 1200px; margin: 0 auto;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="imgs/JoanStaff.png" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-danger">Antonio: <em>Chef de Pasta</em></h5>
+                <p class="card-text">Antonio es nuestro experto en pasta, dedicado a crear platos de pasta frescos y auténticos que capturan la esencia de la cocina italiana. Con una profunda comprensión de las técnicas tradicionales y una pasión por la calidad de los ingredientes, Antonio elabora cada tipo de pasta con precisión y amor. Desde la selección de los ingredientes hasta el toque final en la presentación, su experiencia garantiza que cada plato sea una verdadera delicia para nuestros comensales.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <footer class="bg-dark text-light py-4">
         <div class="container">
