--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="staff.html">Staff</a>
+                    <a class="nav-link" href="staff.html">Nosotros</a>
                 </li>
             </ul>
         </div>
