--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,9 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <img src="imgs/logo.png" alt="Bella Italia Logo" style="height: 40px;">
+          <a class="navbar-brand" href="index.html">
+            <img src="imgs/logo.png" alt="Bella Italia Logo" style="height: 40px;">
+        </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,7 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="staff.html">Staff</a>
+                <a class="nav-link" href="staff.html">Nosotros</a>
               </li>
             </ul>
           </div>
