--- a/staff.html
+++ b/staff.html
@@ -39,7 +39,7 @@
       <section id="nosotros" class="container mt-5">
         <div class="row">
             <div class="col-lg-6">
-                <h2 class="mb-4">Nuestra Historia</h2>
+                <h2 class="mb-4" id="titulo">Nuestra Historia</h2>
                 <p>
                     En <strong>Bella Italia</strong>, cada plato cuenta una historia. Fundado en 1995 en el corazón de la ciudad, nuestro restaurante ha sido un pilar de la cocina italiana auténtica. 
                     Con una pasión por la calidad y el sabor, comenzamos como un pequeño bistró y, gracias a la dedicación de nuestro equipo y la lealtad de nuestros clientes, hemos crecido para ofrecer una experiencia culinaria única.
