--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -76,9 +76,10 @@
         </button>
       </div>
 
-      <h3 id="titulo">Promociones de la semana</h3>
+      <h3 class="display-4 text-center text-uppercase text-warning mb-4 mt-4 fw-bold">Promociones de la semana</h3>
 
-      <div class="row row-cols-1 row-cols-md-3 g-4" id="cards">
+
+      <div class="row row-cols-1 row-cols-md-3 g-4 p-3" id="cards">
         <div class="col">
           <div class="card h-100">
             <img src="imgs/d1.jpg" class="card-img-top img-fluid" alt="...">
@@ -115,7 +116,7 @@
           <div class="row">
             <div class="col-md-4">
               <h5>Contacto</h5>
-              <p>Dirección: Calle Falsa 123, Roma, Italia</p>
+              <p>Dirección: Calle Roma 123, Bahía Blanca, Argentina</p>
               <p>Teléfono: +54 291 4535 3545</p>
               <p>Email: contacto@bellaitalia.com</p>
             </div>
