--- a/menu.html
+++ b/menu.html
@@ -204,7 +204,7 @@
           <div class="row">
             <div class="col-md-4">
               <h5>Contacto</h5>
-              <p>Dirección: Calle Falsa 123, Roma, Italia</p>
+              <p>Dirección: Calle Roma 123, Bahía Blanca, Argentina/p>
               <p>Teléfono: +54 291 4535 3545</p>
               <p>Email: contacto@bellaitalia.com</p>
             </div>
