--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -37,13 +37,13 @@
       </nav>
 
       <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
+        <div class="accordion-item ">
           <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <button class="accordion-button bg-light text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 Nuestra Carta, siempre en evolución
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div id="collapseOne" class="accordion-collapse collapse show bg-warning text-danger fw-bold" data-bs-parent="#accordionExample">
             <div class="accordion-body">
                 <p>En <em>Bella Italia</em>, nos esforzamos por ofrecerte lo mejor en cada visita. Por eso, nuestra carta se renueva constantemente, adaptándose a los productos de estación y seleccionando cuidadosamente los ingredientes más frescos de la región. Nos apasiona mejorar continuamente, y cada nuevo plato es una expresión de nuestro compromiso por brindarte una experiencia gastronómica única y memorable.</p>
                 <p><em>El menú que se obserba abajo es la <u>carta estable de la semana</u>, pero todos los días nos gusta sorprender con platos únicos que no forman parte de la carta.</em></p>
@@ -52,33 +52,33 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <button class="accordion-button collapsed bg-light text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                 La Auténtica Pizza Napolitana
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
+            <div class="accordion-body bg-warning text-danger fw-bold">
                 Nuestras pizzas napolitanas son especiales porque siguen la auténtica tradición italiana. Con una masa elaborada a mano, fermentada lentamente y horneada en horno de piedra a alta temperatura, logramos una textura crujiente por fuera y suave por dentro. Utilizamos ingredientes frescos y locales, junto con tomates San Marzano y mozzarella de la mejor calidad, para ofrecerte una pizza que captura el verdadero sabor de Nápoles en cada bocado.
             </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button collapsed bg-light text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                 Nuestra Pasta, Tradición y Sabor
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
+            <div class="accordion-body bg-warning text-danger fw-bold">
                 En <em>Bella Italia</em>, cada plato de pasta es una celebración de la auténtica cocina italiana. Elaboramos nuestra pasta fresca a diario, utilizando recetas tradicionales y los mejores ingredientes locales. Ya sea que prefieras un clásico como el spaghetti al pomodoro o algo más sofisticado como los ravioli rellenos, cada plato refleja el equilibrio perfecto entre tradición, sabor y frescura. Porque creemos que la pasta, al igual que en Italia, debe ser una experiencia inolvidable.
             </div>
           </div>
         </div>
       </div>
 
-      <h3 id="titulo">Pizza</h3>
+      <h3 class="display-4 text-center text-uppercase text-warning mb-4 mt-4 fw-bold">Pizza</h3>
 
-      <div class="row row-cols-1 row-cols-md-3 g-4" id="cards">
+      <div class="row row-cols-1 row-cols-md-3 g-4 p-3" id="cards">
         <div class="col">
           <div class="card h-100">
             <img src="imgs/pz1.jpg" class="card-img-top" alt="...">
@@ -108,9 +108,9 @@
         </div>        
       </div>
 
-      <h3 id="titulo">Pasta</h3>
+      <h3 class="display-4 text-center text-uppercase text-warning mb-4 mt-4 fw-bold">Pasta</h3>
 
-      <div class="row row-cols-1 row-cols-md-3 g-4" id="cards">
+      <div class="row row-cols-1 row-cols-md-3 g-4 p-3" id="cards">
         <div class="col">
           <div class="card h-100">
             <img src="imgs/p1.jpg" class="card-img-top" alt="...">
@@ -167,9 +167,9 @@
         </div>
       </div>
 
-      <h3 id="titulo">Postres</h3>
+      <h3 class="display-4 text-center text-uppercase text-warning mb-4 mt-4 fw-bold">Postres</h3>
 
-      <div class="row row-cols-1 row-cols-md-3 g-4" id="cards">
+      <div class="row row-cols-1 row-cols-md-3 g-4 p-3" id="cards">
         <div class="col">
           <div class="card h-100">
             <img src="imgs/d3.jpg" class="card-img-top" alt="...">
