--- a/staff.html
+++ b/staff.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Bella Italia</title>
 </head>
@@ -39,7 +36,7 @@
       <section id="nosotros" class="container mt-5">
         <div class="row">
             <div class="col-lg-6">
-                <h2 class="mb-4" id="titulo">Nuestra Historia</h2>
+                <h2 class="mb-4"">Nuestra Historia</h2>
                 <p>
                     En <strong>Bella Italia</strong>, cada plato cuenta una historia. Fundado en 1995 en el corazón de la ciudad, nuestro restaurante ha sido un pilar de la cocina italiana auténtica. 
                     Con una pasión por la calidad y el sabor, comenzamos como un pequeño bistró y, gracias a la dedicación de nuestro equipo y la lealtad de nuestros clientes, hemos crecido para ofrecer una experiencia culinaria única.
@@ -55,7 +52,7 @@
         </div>
     </section>
     
-    <h3 id="titulo">Nuestro staff</h3>
+    <h3 class="display-4 text-center text-uppercase text-warning mb-4 mt-4 fw-bold">Nuestro Staff</h3>
 
       <section style="padding: 1vw;">
         <div class="card mb-3" style="max-width: 1200px; margin: 0 auto;">
