Staff Page updated

--- a/staff.html
+++ b/staff.html
@@ -36,8 +36,8 @@
       <section id="nosotros" class="container mt-5">
         <div class="row">
             <div class="col-lg-6">
-                <h2 class="mb-4"">Nuestra Historia</h2>
-                <p>
+              <h3 class="display-4 text-center text-uppercase text-warning mb-4 mt-4 fw-bold">Nuestra Historia</h3>
+                <p class="fs-">
                     En <strong>Bella Italia</strong>, cada plato cuenta una historia. Fundado en 1995 en el corazón de la ciudad, nuestro restaurante ha sido un pilar de la cocina italiana auténtica. 
                     Con una pasión por la calidad y el sabor, comenzamos como un pequeño bistró y, gracias a la dedicación de nuestro equipo y la lealtad de nuestros clientes, hemos crecido para ofrecer una experiencia culinaria única.
                 </p>
@@ -55,7 +55,7 @@
     <h3 class="display-4 text-center text-uppercase text-warning mb-4 mt-4 fw-bold">Nuestro Staff</h3>
 
       <section style="padding: 1vw;">
-        <div class="card mb-3" style="max-width: 1200px; margin: 0 auto;">
+        <div class="card mb-3 mx-auto" style="max-width: 1200px;">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="imgs/JoanStaff.png" class="img-fluid rounded-start" alt="...">
@@ -71,7 +71,7 @@
         <div class="card mb-3" style="max-width: 1200px; margin: 0 auto;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="imgs/JoanStaff.png" class="img-fluid rounded-start" alt="...">
+              <img src="imgs/AndreStaff.png" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -84,7 +84,7 @@
         <div class="card mb-3" style="max-width: 1200px; margin: 0 auto;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="imgs/JoanStaff.png" class="img-fluid rounded-start" alt="...">
+              <img src="imgs/AntonioStaff.png" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
